--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>我的个人博客</title>
 	<link rel="stylesheet" href="lib/bootstrap-3.3.7-dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/common.css">
-	<link rel="stylesheet" href="css/detail.css">
+	<link rel="stylesheet" href="css/index.css">
 </head>
 <body>
 	<nav class="navbar navbar-default bg-navbar navbar-fixed-top" id="bg-navbar">
