--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 	        <li class="active"><a href="#">首页 <span class="sr-only">(current)</span></a></li>
 	        <li><a href="list.html">html/css</a></li>
 	        <li><a href="#">jacsscript</a></li>
-	        <li><a href="#">活到老</a></li>
-	        <li><a href="#">学到老</a></li>
-	        <li><a href="#">肯定不够</a></li>
+	        <li><a href="#">我是div</a></li>
+	        <li><a href="#">我是span</a></li>
+	        <li><a href="#">我们没有意义</a></li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
@@ -42,7 +42,7 @@
 					    <li data-target="#main-carousel" data-slide-to="0" class="active"></li>
 					    <li data-target="#main-carousel" data-slide-to="1"></li>
 					    <li data-target="#main-carousel" data-slide-to="2"></li>
-					    <li data-target="#main-carousel" data-slide-to="4"></li>
+					    <li data-target="#main-carousel" data-slide-to="3"></li>
 					  </ol>
 
 					  <!-- Wrapper for slides -->
